Added primary key support
Use the defined unique keys to recommend a primary key that minimize the
used space per row and try to use the PK as the right most part of the index.

--- a/examples/recommend/ex001.toml
+++ b/examples/recommend/ex001.toml
@@ -1,5 +1,9 @@
 # Queries from http://mysql.rjweb.org/doc.php/index_cookbook_mysql
 [[fields]]
+name = "id"
+size = 4
+
+[[fields]]
 name = "aaa"
 size = 4
 
